fix: better naming convention
